Bug 324879 - Unable to add, create or delete (nepomuk) tags via the "Properties" dialog
Summary: Unable to add, create or delete (nepomuk) tags via the "Properties" dialog
Status: RESOLVED FIXED
Alias: None
Product: nepomuk
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 4.11.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Nepomuk Bugs Coordination
URL:
Keywords:
: 324089 325737 326299 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-09-13 12:00 UTC by Paul
Modified: 2013-10-20 07:23 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Paul 2013-09-13 12:00:04 UTC
When attempting to add, create new, or delete a nepomuk tag via the context menu Dolphin does not carry out the action.

Reproducible: Always

Steps to Reproduce:
1. Right click on a file.
2. => Properties.
3. => Information.
4. => Tags: Add Tags...
5. Select an existing tag - OK
6. OK (to close Properties)
7. Look again at file properties.

Actual Results:  
At 5: It appears the tag has been added correctly. "Tags: 'tag-name' Change..."
At 7: The tag has not been added.

Expected Results:  
At 7: The tag should have been added :)


The same applies to create or delete - via context menu, does not work.
Tagging via the Information Panel (F11) all works correctly.


~$ dolphin --version
Qt: 4.8.5
KDE Development Platform: 4.11.1
Dolphin: 4.11.1
~$ uname -a
Linux Orion-1.SUSE 3.7.10-1.16-desktop #1 SMP PREEMPT Fri May 31 20:21:23 UTC 2013 (97c14ba) x86_64 x86_64 x86_64 GNU/Linux
Comment 1 Frank Reininghaus 2013-09-13 13:27:19 UTC
Thanks for the bug report. I'll reassign to Nepomuk, even though I'm not sure if this might be caused by the fact that the "Properties" dialog uses the obsolete Nepomuk 1 from kdelibs (which cannot be changed in KDE 4.x).

@Vishesh: sorry if the assignment is incorrect. Feel free to re-assign to the Properties dialog or to close it if appropriate.
Comment 2 Vishesh Handa 2013-10-04 13:28:50 UTC
I'm sorry, but this is a WONTFIX from my side.

The problem is that the dialog shown from the context menu uses old deprecated code which cannot be updated in KDE 4 (many reasons). This is fixed for KDE 5, whenever it releases.

Sorry. You'll just have to avoid using the File Properties dialog to add/remove tags.
Comment 3 Paul 2013-10-04 13:54:54 UTC
Thanks - OK No problem...
Probably also the same for Bug 324089 which I spotted only a few minutes ago...
Comment 4 Vishesh Handa 2013-10-04 14:16:38 UTC
*** Bug 324089 has been marked as a duplicate of this bug. ***
Comment 5 Frank Reininghaus 2013-10-07 11:37:44 UTC
*** Bug 325737 has been marked as a duplicate of this bug. ***
Comment 6 Ian Schwarz 2013-10-07 12:29:52 UTC
Why not remove the faulty part entirely, then? Get rid of the Nepomuk part in the Information tab?
Comment 7 Vishesh Handa 2013-10-07 16:51:25 UTC
(In reply to comment #6)
> Why not remove the faulty part entirely, then? Get rid of the Nepomuk part
> in the Information tab?

I always assumed that just was not possible, but I just had a look at the code and it's quite simple. I'll propose a patch and lets see what everyone says.
Comment 8 Vishesh Handa 2013-10-14 16:16:46 UTC
Git commit fa58b5a00540b4697bc11cacf66fedb1ba6d22ce by Vishesh Handa.
Committed on 10/10/2013 at 10:36.
Pushed by vhanda into branch 'master'.

KPropertiesDialog: Do not show the KFileMetaDataWidget

The KFileMetaDataWidget uses Nepomuk1 which is deprecated and is buggy.
It would be better for people to use the Nepomuk2::FileMetaDataWidget.

This mostly only affect Dolphin where users can tag files via the
Information Panel and via File->Properties. This removes the widget in
the File->Properties
REVIEW: 113190

M  +0    -7    kio/kfile/kpropertiesdialog.cpp

http://commits.kde.org/kdelibs/fa58b5a00540b4697bc11cacf66fedb1ba6d22ce
Comment 9 Frank Reininghaus 2013-10-20 07:23:14 UTC
*** Bug 326299 has been marked as a duplicate of this bug. ***