KPropertiesDialog: Do not show the KFileMetaDataWidget

The KFileMetaDataWidget uses Nepomuk1 which is deprecated and is buggy.
It would be better for people to use the Nepomuk2::FileMetaDataWidget.

This mostly only affect Dolphin where users can tag files via the
Information Panel and via File->Properties. This removes the widget in
the File->Properties

BUG: 324879
REVIEW: 113190